syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.flydubai";
option java_outer_classname = "ProxyProto";

package api;

service Proxy {
    rpc getGreetingMessage(HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
    string clientName = 1;
}

message HelloResponse {
    string greetingMessage = 1;
}